--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 					<ul>
 						<li><a href="#">HOME</a>
 						</li>
-						<li><a href="#">ABOUT ME</a>
+						<li><a href="#about">ABOUT ME</a>
 						</li>
-						<li><a href="#">MY WORK</a>
+						<li><a href="#work">MY WORK</a>
 						</li>
-						<li><a href="#">BLOG</a>
+						<li><a href="#blog">BLOG</a>
 						</li>
-						<li><a href="#">CONTACT</a>
+						<li><a href="#contacts">CONTACT</a>
 						</li>
 					</ul>
 				</div>
@@ -37,7 +37,7 @@
 		</div>
 	</header>
 	<main>
-		<section class="resume">
+		<section id="about" class="resume">
 			<div class="resume__wrapper">
 				<div class="resume__container-title">
 					<h3 class="resume__title">ABOUT ME</h3>
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="portfolio">
+		<section id="work" class="portfolio">
 			<div class="portfolio__wrapper">
 				<div class="portfolio__container-title">
 					<h3 class="portfolio__title">SOME OF MY WORK</h3>
@@ -147,7 +147,7 @@
 				</div>
 			</div>
 		</section>
-		<sectiom class="blog">
+		<sectiom id="blog" class="blog">
 			<div class="blog__wrapper">
 				<div class="blog__container-title">
 					<h3 class="blog__title">From my blog</h3>
@@ -180,7 +180,7 @@
 				</div>
 			</div>
 		</sectiom>
-		<section class="connection">
+		<section id="contacts" class="connection">
 			<div class="connection__wrapper">
 				<div class="connection__container-title">
 					<h3 class="connection__title">contact me</h3>
